Fix false positive from lambda-in-connect when the receiver is on the stack

BUG: 485675